@@ -1,11 +1,12 @@
-package br.com.alura.screenmach.principal;
+package br.com.alura.screenmatch.principal;
 
-import br.com.alura.screenmach.model.DadosEpisodios;
-import br.com.alura.screenmach.model.DadosSerie;
-import br.com.alura.screenmach.model.DadosTemporada;
-import br.com.alura.screenmach.model.Episodio;
-import br.com.alura.screenmach.service.ConsumoApi;
-import br.com.alura.screenmach.service.ConverteDados;
+
+import br.com.alura.screenmatch.model.DadosEpisodios;
+import br.com.alura.screenmatch.model.DadosSerie;
+import br.com.alura.screenmatch.model.DadosTemporada;
+import br.com.alura.screenmatch.model.Episodio;
+import br.com.alura.screenmatch.service.ConsumoApi;
+import br.com.alura.screenmatch.service.ConverteDados;
 
 import javax.swing.*;
 import java.time.DateTimeException;
@@ -39,61 +40,59 @@ public class Principal {
 
 
         List<DadosTemporada> temporadas = new ArrayList<>();
-
-        for (int i = 1; i<=dados.totalTemporadas(); i++){
+  for (int i = 1; i<=dados.totalTemporadas(); i++){
             json = consumo.obterDados(ENDERECO + nomeSerie.replace(" ", "+") +"&season=" + i + API_KEY);
             DadosTemporada dadosTemporada = conversor.obterDados(json, DadosTemporada.class);
             temporadas.add(dadosTemporada);
-
-
         }
         temporadas.forEach(System.out::println);
 
-//
-//        for( int i = 0; i <dados.totalTemporadas(); i++ ){
-//            List <DadosEpisodios> episodiosTemporada =temporadas.get(i).episodios();
-//            for (int j = 0; j < episodiosTemporada.size(); j++) {
-//                System.out.printf(episodiosTemporada.get(j).titulo());
+//        for(int i = 0; i < dados.totalTemporadas(); i++){
+//            List<DadosEpisodio> episodiosTemporada = temporadas.get(i).episodios();
+//            for(int j = 0; j< episodiosTemporada.size(); j++){
+//                System.out.println(episodiosTemporada.get(j).titulo());
 //            }
 //        }
-        temporadas.forEach(t -> t.episodios().forEach(e -> System.out.println(e.titulo())));
-        temporadas.forEach(System.out::println);
 
+        temporadas.forEach(t -> t.episodios().forEach(e -> System.out.println(e.titulo())));
+
+//        List<String> nomes = Arrays.asList("Jacque", "Iasmin", "Paulo", "Rodrigo", "Nico");
+//
+//        nomes.stream().sorted().limit(3).filter(n -> n.startsWith("N")).map(n -> n.toUpperCase())
+//                .forEach(System.out::println);
 
         List<DadosEpisodios> dadosEpisodios = temporadas.stream()
-                .flatMap(t->t.episodios().stream())
-                .toList();
+                .flatMap(t -> t.episodios().stream())
+                .collect(Collectors.toList());
 
-        System.out.printf("Top 5 Episodios");
-
+        System.out.println("\nTop 5 episódios");
         dadosEpisodios.stream()
                 .filter(e -> !e.avaliacao().equalsIgnoreCase("N/A"))
                 .sorted(Comparator.comparing(DadosEpisodios::avaliacao).reversed())
-                .limit(5);
-        dadosEpisodios.forEach(System.out::println);
+                .limit(5)
+                .forEach(System.out::println);
 
-        List<Episodio> episodios =  temporadas.stream()
-                .flatMap(t->t.episodios().stream()
-                        .map(d -> new Episodio(t.numero(), d))).toList();
+        List<Episodio> episodios = temporadas.stream()
+                .flatMap(t -> t.episodios().stream()
+                        .map(d -> new Episodio(t.numero(), d)))
+                .collect(Collectors.toList());
 
         episodios.forEach(System.out::println);
 
-        System.out.println("A partir de que ano voce deceja ver os episodios");
+        System.out.println("A partir de que ano você deseja ver os episódios? ");
         var ano = sc.nextInt();
         sc.nextLine();
 
         LocalDate dataBusca = LocalDate.of(ano, 1, 1);
 
-        DateTimeFormatter formato = DateTimeFormatter.ofPattern("dd/MM/yyyy");
+        DateTimeFormatter formatador = DateTimeFormatter.ofPattern("dd/MM/yyyy");
 
         episodios.stream()
-                .filter(e -> e.getAnoLancamento() != null && e.getAnoLancamento().isAfter(dataBusca))
+                .filter(e -> e.getDataLancamento() != null && e.getDataLancamento().isAfter(dataBusca))
                 .forEach(e -> System.out.println(
-                        "Temporada" + e.getTemporada() +
-                                "Episodio" + e.getTitulo() +
-                                "Data de Lancamento" + e.getAnoLancamento().format(formato)
-
+                        "Temporada:  " + e.getTemporada() +
+                                " Episódio: " + e.getTitulo() +
+                                " Data lançamento: " + e.getDataLancamento().format(formatador)
                 ));
     }
 }
-
